# ws_smart_trolley_ai_v3

./: .gitignore  BLUETOOTH_SETUP_GUIDE.md  BLUETOOTH_TEST_GUIDE.md  COMO_USAR_ROBOT.txt  CONTROL_GUIDE.md  GUIA_CONTROL_DJI.md  GUIA_USBIPD_WSL2.md  IMPLEMENTATION_SUMMARY.md  INSTRUCCIONES_EMPAREJAR_CONTROL.md  PERSON_FOLLOWER_GUIDE.md  QUICK_REFERENCE.txt  README.md  launch_sim_ros2control.sh  reset_robot.sh  start_robot.sh  start_webapp.sh
src/smart_t_ai_v2/: CMakeLists.txt  HARDWARE_GUIDE.md  package.xml  trolley_hardware_interface.xml
src/smart_t_ai_v2/config/: arduino_params.yaml  control.yaml  controllers.yaml  hardware.yaml  navigation.yaml  perception.yaml  sim_controllers.yaml
src/smart_t_ai_v2/config/rviz/: full_robot.rviz  kinect_view.rviz  sensors.rviz  tests.rviz
src/smart_t_ai_v2/description/: SMART-TROLLEY_V5.gazebo  SMART-TROLLEY_V5.trans  SMART-TROLLEY_V5.xacro  camera.xacro  gazebo_control_trolley.xacro  kinect.xacro  lidar.xacro  materials.xacro  robot.urdf.xacro  ros2_control.xacro
src/smart_t_ai_v2/hardware/: trolley_hardware_interface.cpp
src/smart_t_ai_v2/hardware/include/smart_t_ai_v2/: trolley_hardware_interface.hpp
src/smart_t_ai_v2/launch/: interaction.launch.py  kinect_view.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_sim_ros2_control.launch.py  motor_test.launch.py  opto_ppr_test.launch.py  person_follower.launch.py  person_follower_sim.launch.py  positioning_test.launch.py  rotate_viz.launch.py  rsp.launch.py  rviz.launch.py  sensors_viz.launch.py  simple_motors.launch.py  teleop_robot.launch.py
src/smart_t_ai_v2/meshes/: camera.stl  caster_wheel.stl  chassis.stl  wheel_lh.stl
src/smart_t_ai_v2/scripts/: arduino_bridge.py  bluetooth_helper.py  calibrate_ppr.py  cmd_vel_dashboard.py  cmd_vel_relay.py  coral_detector_node.py  encoder_raw_test.py  fake_depth_publisher.py  hailo_face_gesture_node.py  joy_evdev_node.py  kinect_node.py  kinect_track.py  ld06_lidar_node.py  motor_diag.py  motor_simple_test.py  odom_tf_publisher.py  opto_ppr_confirm.py  person_follower.py  register_face.py  respawn_robot.sh  robot_mode_manager_node.py  stadia_teleop_node.py  test_5m_rotate.py  test_arduino_connection.py  test_motors_hall.py  test_positioning.py  voice_control_node.py
src/smart_t_ai_v2/webapp/backend/: requirements.txt  server.py
src/smart_t_ai_v2/webapp/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/smart_t_ai_v2/webapp/frontend/public/: manifest.json  sw.js
src/smart_t_ai_v2/webapp/frontend/src/: App.jsx  index.css  main.jsx
src/smart_t_ai_v2/webapp/frontend/src/components/: CameraView.jsx  Dashboard.jsx  ModeButton.jsx  ShotCounter.jsx  StatusBar.jsx
src/smart_t_ai_v2/webapp/frontend/src/hooks/: useWebSocket.js
src/smart_t_ai_v2/worlds/: empty.sdf  obstacles.sdf
tests/: README.md
tests/hardware/: test_arduino_diagnostic.py  test_arduino_direct.py  test_bluetooth_arduino.py  test_camera.py  test_joy_buttons.py  test_joystick_pairing.sh  test_ros_diagnostics.py  test_stadia_calibration.py
tests/integration/: test_simple.sh  test_system.sh
tests/nav/: test_5m.py  test_5m_rotate.py  test_movement.py  test_pid_heading.py
tools/: README.md  connect_hc05.py  download_hailo_models.sh  quick_bt_test.sh
